--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ferienwohnungen Reckert - Witten</title>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <!-- Mobile-First CSS (applies to all devices) -->
+    <link rel="stylesheet" href="styles-mobile.css">
+    <!-- Desktop-Optimized CSS (overrides for larger screens) -->
+    <link rel="stylesheet" href="styles-desktop.css">
     <style>
         /* ===== Reset & Base Styles ===== */
         * {
@@ -750,8 +754,6 @@
         .mt-2 {
             margin-top: 2rem;
         }
-    </style>
-
     </style>
 </head>
 <body>
