--- a/index.html
+++ b/index.html
@@ -50,31 +50,32 @@
         }
 
         h1 {
-            font-size: clamp(2.2rem, 5vw, 4rem);
+            font-size: clamp(1.8rem, 5vw, 4rem);
             font-weight: 700;
         }
 
         h2 {
-            font-size: clamp(1.8rem, 4vw, 3rem);
+            font-size: clamp(1.5rem, 4vw, 3rem);
             font-weight: 600;
         }
 
         h3 {
-            font-size: 1.5rem;
+            font-size: clamp(1.1rem, 3vw, 1.5rem);
             font-weight: 600;
         }
 
         p {
             color: var(--text-light);
-            margin-bottom: 1.2rem;
+            margin-bottom: clamp(0.8rem, 2vw, 1.2rem);
             line-height: 1.8;
+            font-size: clamp(0.9rem, 1.5vw, 1rem);
         }
 
         /* ===== Header & Navigation ===== */
         header {
             background: var(--bg-white);
             color: var(--text-dark);
-            padding: 1.2rem 0;
+            padding: clamp(0.75rem, 1.5vw, 1.2rem) 0;
             position: sticky;
             top: 0;
             z-index: 1000;
@@ -83,21 +84,25 @@
         }
 
         .header-container {
-            max-width: 1200px;
+            width: 100%;
+            max-width: 100%;
             margin: 0 auto;
-            padding: 0 1.5rem;
+            padding: 0 clamp(0.75rem, 2vw, 1.5rem);
             display: flex;
             justify-content: space-between;
             align-items: center;
+            gap: clamp(0.5rem, 1.5vw, 1rem);
+            flex-wrap: wrap;
         }
 
         .logo {
-            font-size: 1.5rem;
+            font-size: clamp(1rem, 3vw, 1.8rem);
             font-weight: 700;
             font-family: 'Playfair Display', serif;
             color: var(--primary-color);
             text-decoration: none;
             transition: var(--transition);
+            flex-shrink: 0;
         }
 
         .logo:hover {
@@ -215,28 +220,33 @@
         .hero {
             background: linear-gradient(135deg, rgba(194, 110, 75, 0.6), rgba(75, 56, 50, 0.6)), 
                         url('./images/apartment.jpg') center/cover;
+            background-attachment: fixed;
+            background-size: cover;
             color: var(--white);
-            padding: 160px 1.5rem;
+            padding: clamp(3rem, 12vw, 10rem) clamp(1rem, 3vw, 2rem);
             text-align: center;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            min-height: 500px;
+            min-height: clamp(250px, 60vh, 600px);
             animation: fadeInDown 0.8s ease;
+            width: 100%;
         }
 
         .hero h1 {
             color: var(--white);
-            margin-bottom: 1.5rem;
+            margin-bottom: clamp(1rem, 2vw, 1.5rem);
             text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3);
+            font-size: clamp(1.6rem, 5vw, 3.5rem);
         }
 
         .hero p {
-            font-size: 1.1rem;
+            font-size: clamp(0.9rem, 2vw, 1.1rem);
             color: var(--white);
-            max-width: 600px;
+            max-width: clamp(280px, 90vw, 700px);
             text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3);
+            margin: 0 auto;
         }
 
         /* ===== Buttons ===== */
@@ -274,7 +284,7 @@
 
         /* ===== Section Styles ===== */
         section {
-            padding: 80px 1.5rem;
+            padding: clamp(2rem, 6vw, 4rem) clamp(1rem, 2vw, 1.5rem);
         }
 
         section:nth-child(even) {
@@ -286,23 +296,25 @@
         }
 
         .container {
-            max-width: 1200px;
+            width: 100%;
+            max-width: min(1200px, 95vw);
             margin: 0 auto;
         }
 
         .section-title {
             text-align: center;
-            margin-bottom: 3.5rem;
+            margin-bottom: clamp(1.5rem, 4vw, 3.5rem);
             position: relative;
+            font-size: clamp(1.5rem, 4.5vw, 2.5rem);
         }
 
         .section-title::after {
             content: '';
             display: block;
-            width: 80px;
-            height: 4px;
+            width: clamp(50px, 15vw, 100px);
+            height: clamp(3px, 0.5vw, 5px);
             background: var(--primary-color);
-            margin: 1rem auto 0;
+            margin: clamp(0.6rem, 1.5vw, 1rem) auto 0;
             border-radius: 2px;
         }
 
@@ -313,29 +325,34 @@
 
         .about-content {
             display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 4rem;
+            grid-template-columns: repeat(auto-fit, minmax(clamp(250px, 50vw, 500px), 1fr));
+            gap: clamp(2rem, 5vw, 4rem);
             align-items: center;
+            width: 100%;
         }
 
         .about-text h3 {
             color: var(--primary-color);
-            margin-bottom: 1.5rem;
-            font-size: 1.8rem;
+            margin-bottom: clamp(0.8rem, 2vw, 1.5rem);
+            font-size: clamp(1.1rem, 3vw, 1.8rem);
         }
 
         .about-image {
-            border-radius: 15px;
+            border-radius: clamp(10px, 2vw, 20px);
             overflow: hidden;
             box-shadow: var(--shadow-medium);
             animation: fadeInRight 0.8s ease;
+            margin-top: clamp(1rem, 2vw, 1.5rem);
+            width: 100%;
         }
 
         .about-image img {
             width: 100%;
-            height: auto;
+            height: 100%;
             display: block;
             transition: var(--transition);
+            object-fit: cover;
+            aspect-ratio: 1;
         }
 
         .about-image:hover img {
@@ -345,7 +362,7 @@
         @media (max-width: 768px) {
             .about-content {
                 grid-template-columns: 1fr;
-                gap: 2rem;
+                gap: clamp(1.5rem, 3vw, 2.5rem);
             }
         }
 
@@ -356,19 +373,24 @@
 
         .amenities-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 2.5rem;
+            grid-template-columns: repeat(auto-fit, minmax(clamp(200px, 35vw, 300px), 1fr));
+            gap: clamp(1rem, 3vw, 2.5rem);
+            width: 100%;
         }
 
         .amenity-card {
             background: var(--white);
-            padding: 2.5rem;
-            border-radius: 12px;
+            padding: clamp(1.25rem, 3vw, 2rem);
+            border-radius: clamp(10px, 2vw, 15px);
             text-align: center;
             transition: var(--transition);
             cursor: pointer;
             box-shadow: var(--shadow-soft);
             border: 1px solid var(--light-bg);
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            height: 100%;
         }
 
         .amenity-card:hover {
@@ -378,12 +400,14 @@
         }
 
         .amenity-card h3 {
-            margin-bottom: 1rem;
+            margin-bottom: clamp(0.6rem, 1.5vw, 1rem);
             color: var(--primary-color);
+            font-size: clamp(1rem, 2.5vw, 1.3rem);
         }
 
         .amenity-card p {
-            font-size: 0.95rem;
+            font-size: clamp(0.85rem, 1.5vw, 0.95rem);
+            margin-bottom: 0;
         }
 
         /* ===== Gallery Section ===== */
@@ -393,17 +417,20 @@
 
         .gallery-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 2rem;
+            grid-template-columns: repeat(auto-fit, minmax(clamp(150px, 40vw, 300px), 1fr));
+            gap: clamp(0.75rem, 2vw, 1.5rem);
+            width: 100%;
         }
 
         .gallery-item {
             position: relative;
             overflow: hidden;
-            border-radius: 12px;
+            border-radius: clamp(8px, 2vw, 15px);
             box-shadow: var(--shadow-soft);
             cursor: pointer;
             aspect-ratio: 1;
+            width: 100%;
+            height: auto;
         }
 
         .gallery-item img {
@@ -411,6 +438,7 @@
             height: 100%;
             object-fit: cover;
             transition: var(--transition);
+            display: block;
         }
 
         .gallery-item:hover img {
@@ -439,7 +467,9 @@
             color: var(--white);
             font-weight: 600;
             font-family: 'Playfair Display', serif;
-            font-size: 1.2rem;
+            font-size: clamp(0.9rem, 2vw, 1.3rem);
+            text-align: center;
+            padding: clamp(0.5rem, 2vw, 1rem);
         }
 
         /* ===== Pricing Section ===== */
@@ -449,24 +479,28 @@
 
         .pricing-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 2.5rem;
-            margin-bottom: 2rem;
+            grid-template-columns: repeat(auto-fit, minmax(clamp(250px, 35vw, 350px), 1fr));
+            gap: clamp(1rem, 3vw, 2.5rem);
+            margin-bottom: clamp(1rem, 3vw, 2rem);
+            width: 100%;
         }
 
         .pricing-card {
             background: var(--white);
-            padding: 2.5rem;
-            border-radius: 12px;
+            padding: clamp(1.25rem, 3vw, 2rem);
+            border-radius: clamp(10px, 2vw, 15px);
             text-align: center;
             transition: var(--transition);
             border: 2px solid var(--light-bg);
             box-shadow: var(--shadow-soft);
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
         }
 
         .pricing-card.featured {
             border-color: var(--primary-color);
-            transform: scale(1.05);
+            transform: scale(1);
             box-shadow: var(--shadow-medium);
         }
 
@@ -476,95 +510,106 @@
         }
 
         .price {
-            font-size: 2.8rem;
+            font-size: clamp(1.8rem, 4vw, 2.8rem);
             font-weight: 700;
             color: var(--primary-color);
-            margin: 1.5rem 0;
+            margin: clamp(0.8rem, 2vw, 1.5rem) 0;
             font-family: 'Playfair Display', serif;
         }
 
         .price-period {
             color: var(--text-light);
-            font-size: 0.9rem;
+            font-size: clamp(0.8rem, 1.5vw, 0.9rem);
+            margin-bottom: clamp(0.8rem, 2vw, 1rem);
         }
 
         .price-features {
             text-align: left;
-            margin: 1.5rem 0;
+            margin: clamp(0.8rem, 2vw, 1.5rem) 0;
             list-style: none;
+            flex-grow: 1;
         }
 
         .price-features li {
-            padding: 0.7rem 0;
+            padding: clamp(0.5rem, 1vw, 0.7rem) 0;
             border-bottom: 1px solid var(--light-bg);
             color: var(--text-light);
-            font-size: 0.95rem;
+            font-size: clamp(0.85rem, 1.2vw, 0.95rem);
         }
 
         .price-features li:before {
             content: '✓ ';
             color: var(--primary-color);
             font-weight: bold;
-            margin-right: 0.7rem;
+            margin-right: clamp(0.3rem, 1vw, 0.7rem);
         }
 
         /* ===== Contact Section ===== */
         #contact {
             background: linear-gradient(135deg, var(--primary-dark), #5C4440);
             color: var(--white);
+            padding: clamp(2.5rem, 6vw, 4rem) clamp(1rem, 3vw, 2rem);
         }
 
         #contact h2,
         #contact h3 {
             color: var(--white);
+            font-size: clamp(1.1rem, 3vw, 1.5rem);
         }
 
         .contact-content {
             display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 4rem;
+            grid-template-columns: repeat(auto-fit, minmax(clamp(280px, 45vw, 500px), 1fr));
+            gap: clamp(1.5rem, 4vw, 3rem);
+            width: 100%;
         }
 
         .contact-info h3 {
-            margin-top: 1.5rem;
+            margin-top: clamp(0.8rem, 2vw, 1.5rem);
             color: var(--primary-color);
+            font-size: clamp(1rem, 2.5vw, 1.3rem);
         }
 
         .contact-info p {
             color: rgba(255, 255, 255, 0.95);
+            font-size: clamp(0.85rem, 1.5vw, 0.95rem);
+            margin-bottom: clamp(0.8rem, 1.5vw, 1rem);
         }
 
         #map {
-            border-radius: 10px;
+            border-radius: clamp(8px, 1.5vw, 12px);
             overflow: hidden;
-            margin-top: 1.5rem;
+            margin-top: clamp(1rem, 2vw, 1.5rem);
+            height: clamp(200px, 50vh, 350px);
+            width: 100%;
         }
 
         .form-group {
-            margin-bottom: 1.5rem;
+            margin-bottom: clamp(0.8rem, 2vw, 1.5rem);
         }
 
         .form-group label {
             display: block;
-            margin-bottom: 0.6rem;
+            margin-bottom: clamp(0.4rem, 1vw, 0.6rem);
             font-weight: 500;
+            font-size: clamp(0.9rem, 1.5vw, 1rem);
         }
 
         .form-group input,
         .form-group textarea {
             width: 100%;
-            padding: 0.85rem;
+            padding: clamp(0.6rem, 1.5vw, 0.85rem);
             border: none;
-            border-radius: 8px;
+            border-radius: clamp(6px, 1vw, 10px);
             font-family: 'Poppins', sans-serif;
-            font-size: 0.95rem;
+            font-size: clamp(0.9rem, 1.5vw, 0.95rem);
             background: rgba(255, 255, 255, 0.95);
             transition: var(--transition);
         }
 
         .form-group textarea {
             resize: vertical;
-            min-height: 120px;
+            min-height: 100px;
         }
 
         .form-group input:focus,
@@ -577,7 +622,7 @@
         @media (max-width: 768px) {
             .contact-content {
                 grid-template-columns: 1fr;
-                gap: 2rem;
+                gap: clamp(1.5rem, 3vw, 2rem);
             }
         }
 
@@ -585,24 +630,26 @@
         footer {
             background: var(--primary-dark);
             color: var(--white);
-            padding: 3.5rem 1.5rem 1.5rem;
+            padding: clamp(1.5rem, 4vw, 3.5rem) clamp(1rem, 2vw, 1.5rem) clamp(0.75rem, 2vw, 1rem);
             text-align: center;
         }
 
         .footer-content {
+            width: 100%;
             max-width: 1200px;
             margin: 0 auto;
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 2.5rem;
-            margin-bottom: 2.5rem;
+            grid-template-columns: repeat(auto-fit, minmax(clamp(200px, 35vw, 280px), 1fr));
+            gap: clamp(1rem, 3vw, 2rem);
+            margin-bottom: clamp(1rem, 2vw, 1.5rem);
             text-align: left;
         }
 
         .footer-section h4 {
             color: var(--primary-color);
-            margin-bottom: 1.2rem;
+            margin-bottom: clamp(0.6rem, 1.5vw, 0.8rem);
             font-family: 'Playfair Display', serif;
+            font-size: clamp(0.95rem, 2vw, 1.1rem);
         }
 
         .footer-section p,
@@ -610,9 +657,9 @@
             color: rgba(255, 255, 255, 0.85);
             text-decoration: none;
             display: block;
-            margin-bottom: 0.6rem;
+            margin-bottom: clamp(0.4rem, 1vw, 0.6rem);
             transition: var(--transition);
-            font-size: 0.95rem;
+            font-size: clamp(0.85rem, 1.2vw, 0.95rem);
         }
 
         .footer-section a:hover {
@@ -621,8 +668,9 @@
 
         .footer-bottom {
             border-top: 1px solid rgba(255, 255, 255, 0.1);
-            padding-top: 2rem;
+            padding-top: clamp(1rem, 2vw, 1.5rem);
             color: rgba(255, 255, 255, 0.75);
+            font-size: clamp(0.8rem, 1.2vw, 0.85rem);
         }
 
         /* ===== Animations ===== */
@@ -668,7 +716,7 @@
         }
 
         .mt-2 {
-            margin-top: 2rem;
+            margin-top: clamp(1rem, 2vw, 2rem);
         }
     </style>
 </head>
